# rubiks-cube-solver

./: .gitignore  CMakeLists.txt  Cube.cpp  Cube.h  README.md  Todo list.txt  a  main.cpp
Cube/: cube.cpp  cube.h  cubeind.cpp  cubeind.h  rubikscube.cpp  rubikscube.h
Data/Thistlethwaite/: G1  G1 stats.txt  G2  G3  G3 stats.txt
Database/: Database.cpp  Database.h
Database/Generated_Databases/: thistlethwaite_g0g1  thistlethwaite_g0g1 stats.txt  thistlethwaite_g2g3  thistlethwaite_g2g3 stats.txt
Engine/: Engine.cpp  Engine.h  engine.cpp  engine.h
Solver/: Database.cpp  Database.h  Goal.h  Searcher.cpp  Searcher.h  Solver.cpp  Solver.h  database.cpp  database.h  goal.h  searcher.cpp  searcher.h  solver.h
Solver/Thistlethwaite/: Groups.h  Thistlethwaite.cpp  Thistlethwaite.h  groups.h  tdatabase.cpp  tdatabase.h  thistlethwaite.cpp  thistlethwaite.h
Solver/Thistlethwaite/Databases/: G0_G1_database.cpp  G0_G1_database.h  G1_G2_database.cpp  G1_G2_database.h  G2_G3_database.cpp  G2_G3_database.h  G3_G4_database.cpp  G3_G4_database.h
Solver/Thistlethwaite/Goals/: G0_G1_goal.cpp  G0_G1_goal.h  G1_G2_goal.cpp  G1_G2_goal.h  G2_G3_goal.cpp  G2_G3_goal.h  G3_G4_goal.h
Solver/Thistlethwaite/Groups/: G0_G1_database.cpp  G0_G1_database.h  G0_G1_goal.h  G1_G2_database.cpp  G1_G2_goal.cpp  G1_G2_goal.h  G2_G3_database.h  Groups.h
Solver/Thistlethwaite/Groups/Databases/: G0_G1_database.h  G1_G2_database.cpp  G1_G2_database.h  G2_G3_database.cpp  G2_G3_database.h  G3_G4_database.h
Solver/Thistlethwaite/Groups/Goals/: G0_G1_goal.cpp  G0_G1_goal.h  G1_G2_goal.h  G2_G3_goal.cpp  G2_G3_goal.h  G3_G4_goal.cpp  G3_G4_goal.h
Util/: DatabaseGenerator.cpp  DatabaseGenerator.h  Indexer.h  MovesSimplifier.cpp  MovesSimplifier.h  PermutationIndexer.h  RandomNumGenerator.h  Rubiks Cube Indices.xlsx  SearchUtil.cpp  SearchUtil.h  Timer.h  Untitled.xcf  databasegenerator.cpp  databasegenerator.h  indexer.h  searchutil.cpp  searchutil.h
cmake/: FindSDL2.cmake
